<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lionsquare.canoviusclient.MainActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="50dp"
        android:elevation="50dp"
        android:background="@color/primary_act"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >


    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:layout_margin="@dimen/card_margin"
        android:layout_below="@+id/toolbar">

    <LinearLayout
        android:id="@+id/linear"
        android:padding="20dp"
        style="@style/Widget.CardContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_color"
            android:text="Introduce tus datos para agregar este dispositivo"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:textColor="@color/dark_color"
            style="@style/estiloEditText"
            android:inputType="textEmailAddress"
            android:padding="25dp"
            android:textColorHint="@color/dark_color"
            android:hint="@string/maraca_agua_user"
            />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            style="@style/estiloEditText"
            android:drawableLeft="@drawable/password"
            android:padding="25dp"
            android:textColor="@color/dark_color"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_color"
            android:hint="@string/password" />



        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:layout_below="@+id/card"
            style="@style/ButtonMaterial"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
</android.support.v7.widget.CardView>






</RelativeLayout>