<?xml version="1.0" encoding="utf-8"?>
<com.lionsquare.canisovismanager.widgets.MapCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    android:onClick="showMapDetails"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Widget.CardContentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/mapview"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/title"
            map:liteMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:text="1"
                        android:textColor="@color/dark_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:text="@string/id_emei"
                        android:textColor="@color/dark_color" />

                    <TextView
                        android:id="@+id/id_divice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:textColor="@color/rojo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:text="@string/divice"
                        android:textColor="@color/dark_color" />

                    <TextView
                        android:id="@+id/divice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:textColor="@color/dark_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:text="@string/direct"
                        android:textColor="@color/dark_color" />

                    <TextView
                        android:id="@+id/direct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:textColor="@color/dark_color"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:text="@string/fecha"
                        android:textColor="@color/dark_color" />

                    <TextView
                        android:id="@+id/fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pading_txt"
                        android:text="@string/no_disponible"
                        android:textColor="@color/azul" />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/overflow"
                android:layout_width=".2dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="45dp"
                android:layout_weight=".1"
                android:scaleType="center"
                android:src="@drawable/ic_dots"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</com.lionsquare.canisovismanager.widgets.MapCardView>